fix BlogItemStyleTwo dark mode classed of landing page

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@
     @apply flex gap-1 justify-center items-center bg-secondary dark:bg-gray-900 w-[102px] h-[40px] rounded-[80px];
   }
   .landingBlogItemsStyleTwoColor {
-    @apply font-[500] text-primaryColor dark:text-darkText mt-[1px];
+    @apply font-[500] text-primaryColor mt-[1px];
   }
   .landingTeacherItemCoursesCount {
     @apply absolute top-14 right-14 flex justify-center items-center w-[88px] h-[36px] bg-white rounded-[50px] shadow-landingTeacherCoursesCount;
